Updated the backend api route for the run list to give back the run nr, status and input data.
